# OS_study

./: .gitignore  readme.md
compile_procedure/: compile_O0.sh
csapp_code/arch/: pushpoptest
csapp_code/intro/: hello.64d  hello.64s
csapp_code/netp/: dd2hex.c  dd2hex.h
csapp_code/netp/socketp/: hello_client.c  hello_server.c  server  server_mul_p  server_mul_process.c  server_mul_t  server_mul_thread.c  test_client  test_client.c
csapp_code_CSB/concur/: err_handle_macro.c  hello  hello.c  output  thread_data_race.c
csapp_code_CSB/intro/: hello  hello.s  minimal.s  output.s
csapp_code_CSB/netp/my_socketp/: TODOS.md  client  hello_server.c  server  server_mul_t
daemon_process/: new.sh
daemon_process/become_daemon-1.0/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
daemon_process/become_daemon-1.0/src/: Makefile  Makefile.am  Makefile.in  become_daemon  become_daemon.c  become_daemon.h  find_who_to_daemon.c  main.c
daemon_process/become_daemon-1.0/src/.deps/: become_daemon.Po  main.Po
daemon_process/daemon_test2/: test.c
hello/: hello
high_level_language_trait_simulate_Cpp_JS_pyton/clousure_and_callback/: example.c
high_level_language_trait_simulate_Cpp_JS_pyton/simulate_async_in_C/: FP.c
imm_malloc/: m.c
minimal_hello/: Makefile  a.out.back.S  binary_print.rs  hello  hello.c  minimal.S  minimal.s  minimal2.s  minimal3.s  minimal_E.S  output.s  parse  readme.md
process_communicate/: pipe.c
process_communicate_/: intro.md  share_mem.c  test1
riscv_compile_on_x86/: readme.md
(+4 files in other folders)
